examples/pass/errorMain1.c
main(){
    print("no deberia imprimir esto, errorMain1");
}