examples/error/errorMain1.c
main(){
    printf("no deberia imprimir esto, errorMain1");
}
